--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -16,7 +16,8 @@
   'components/use-arrow',
   'components/button-up',
   'components/sales_arrow',
-  'components/backgrounds',
+  'components/finance-arrow',
+  'components/links-font',
   'components/navigation',
   'components/start-columns',
   'components/title_section',
