--- a/src/style/abstracts/_mixins.scss
+++ b/src/style/abstracts/_mixins.scss
@@ -1,9 +1,27 @@
-@mixin font ($family, $weight, $size, $height, $color) {
+@mixin font ($family, $weight, $size, $height) {
   font-family: $family, 'Arial', 'Helvetica', sans-serif;
   font-weight: $weight;
   font-size: $size;
   line-height: $height;
-  color: $color;
+}
+
+@mixin fontAdaptive ($f1: $main-f1, $f2: $main-f2, $f3: $main-f3, $f4: $main-f4) {
+
+  @include respond-to('max-huge') {
+      font-size: $f1;
+    }
+
+    @include respond-to('max-large') {
+      font-size: $f2;
+    }
+  
+    @include respond-to('max-medium') {
+      font-size: $f3;
+    }
+  
+    @include respond-to('max-small') {
+      font-size: $f4;
+    }
 }
 
 @mixin section ($background, $width: 100%, $height: auto) {
