--- a/src/style/components/_start-columns.scss
+++ b/src/style/components/_start-columns.scss
@@ -46,26 +46,24 @@
 
   &__title {
     margin: 27px 0;
-    @include font ($pt-sans, bold, $small-font-size, $small-font-size, $dark-grey);
-    white-space: nowrap;
-    letter-spacing: 1px;
-    text-transform: uppercase;
+    // white-space: nowrap;
+    // letter-spacing: 1px;
+    // text-transform: uppercase;
 
-    @include respond-to('max-medium') {
-      font-size: 14px;
-    }
+    // @include respond-to('max-medium') {
+    //   font-size: 14px;
+    // }
 
-    @include respond-to('max-small') {
-      white-space: normal;
-    }
+    // @include respond-to('max-small') {
+    //   white-space: normal;
+    // }
   }
 
   &__text {
-    @include font ($pt-sans, normal, $main-font-size, $main-line-heigth, $dark-grey);
 
-    @include respond-to('max-medium') {
-      font-size: $small-font-size;
-      line-height: 24px;
-    }
+    // @include respond-to('max-medium') {
+    //   font-size: $small-font-size;
+    //   line-height: 24px;
+    // }
   }
 }
