--- a/src/style/pages/_index.scss
+++ b/src/style/pages/_index.scss
@@ -7,20 +7,17 @@
 .introduction {
   @include size (100%, auto, 0, 10% 0 14%);
   @include position (relative);
-
+// !=========================
   @include respond-to('max-medium') {
     background: $intro-gradient;
   }
+// !=========================
 
   &__flex {
     @include flex (column, center, flex-start);
   }
 
   &__title {
-    @include font ($intro-font-family, bold,
-                  $intro-font-size, 
-                  $intro-line-height, 
-                  $intro-introdution-color);
     margin-bottom: 26px;
     z-index: 5;
 
@@ -32,6 +29,7 @@
         margin-left: 0;
       }
     }
+  // !=========================
 
     @include respond-to('max-huge') {
       font-size: 41px;
@@ -51,18 +49,16 @@
       max-width: 460px;
       font-size: 24px;
     }
+  // !=========================
 
   }
 
   &__text {
-    @include font ($main-font-family, 
-                  normal, $main-font-size, 
-                  $main-line-heigth, 
-                  $intro-span-color);
     max-width: 490px; 
     margin-bottom: 35px;
     z-index: 5;
 
+// !=========================
     @include respond-to('max-huge') {
       max-width: 450px;
       font-size: 18px;
@@ -79,6 +75,7 @@
     }
   }
 
+// !=========================
   &__link {
     margin: 0 auto 0 0;
     z-index: 5;
@@ -138,6 +135,8 @@
 
   &__item {
 
+    @include fontAdaptive ();
+
     &:nth-child(2) {
       margin: 0 40px;
     }    
@@ -172,11 +171,8 @@
     }
   }
 
+// !=========================
   &__text {
-    @include font ($pt-sans, normal, 
-                  $main-font-size, 
-                  $main-line-heigth, 
-                  $dark-grey);
     margin: 0 0 30px 0;
 
     @include respond-to('max-small') {
@@ -184,6 +180,7 @@
     }
   }
 
+// !=========================
   &__list {
 
     @include respond-to('max-medium') {
@@ -191,15 +188,13 @@
     }
   }
 
+// !=========================
   &__item {
-    @include font ($pt-sans, normal, 
-                  $small-font-size, 
-                  $small-line-height, 
-                  $dark-grey);
     @include size (auto, auto, 0 0 16px, 0 0 0 30px);
     @include backgroundImage (url(../assets/img/list_item.svg), 0 4px)
   }
 
+// !=========================
   &__img {
     @include size (320px, 307px, 0 0 0 50px);
     flex: 0 0 320px;
@@ -216,99 +211,78 @@
   }
 }
 
-// ! to be continued
-
 .finance {
-  padding: 90px 0 40px 0;
-
-  @include respond-to('max-medium') {
-    padding: 45px 0 20px 0;
-  }
-
-    &__flex {
-      display: flex;
-
-      @include respond-to('max-medium') {
-        flex-direction: column;
-      }
-
+  position: relative;
+    padding: 90px 0 0 0;
+  
+    @include respond-to('max-medium') {
+      padding: 45px 0 20px 0;
+    }
+  
+    @include respond-to('max-small') {
+      padding: 45px 0 60px 0;
     }
 
-		&__body {
-      padding: 0 50px 0 0;
-      @include flex (column);
-		}
+  &__flex {
+    padding: 0 0 40px 0;
+    @include flex ();
 
-		&__title {
-      margin: 0 0 30px 0;
-		}
+    @include respond-to('max-medium') {
+      flex-direction: column;
+    }
+  }
 
-		&__text {
-      font-family: PT Sans;
-      font-size: 20px;
-      line-height: 30px;
-      color: #4f4f4f;
-      margin: 0 0 41px 0;
-		}
+  &__body {
+    padding: 0 50px 0 0;
+    @include flex (column);
+  }
 
-		&__list {
-		}
+  &__title {
+    margin: 0 0 30px 0;
+  }
 
-		&__img-wrap {
-      width: 320px;
-      margin: 7px 0 0 0;
-		}
+  &__text {
+    margin: 0 0 41px 0;
+  }
 
-		&__img {
-      width: 320px;
-		}
+  &__list-title {
+    margin: 0 0 25px 0;
+  }
+
+  &__list {
+  }
+
+  &__img {
+    flex: 0 0 320px;
+    @include size (320px, 320px);
+    @include backgroundImage (url(../assets/img/Lean_in_finance.png), 0 0, cover);
+  }
+
+  &__button {
+    @include position (absolute, auto, calc(100vw - 50%), 0);
+  }
 }
 
-.list-fnnc {
+.finance-list {
 
-		&__list-title {
-      font-family: PT Sans;
-      font-weight: bold;
-      font-size: 24px;
-      line-height: 30px;
-      color: #333333;
-      margin: 0 0 25px 0;
-		}
-
-		&__list {
-		}
-
-		&__item {
-      font-family: PT Sans;
-      font-size: 16px;
-      line-height: 20px;
-      color: #4f4f4f;
-      margin: 0 0 16px;
-      padding: 0 0 0 30px;
-      background-image: url(../img/list_item.svg);
-      background-position: 0 4px;
-      background-repeat: no-repeat;
-		}
+// !=========================
+  &__item {
+    @include size (auto, auto,  0 0 16px 0, 0 0 0 30px);
+    @include backgroundImage (url(../assets/img/list_item.svg), 0 4px);
+  }
 }
 
+// !=========================
 .discuss {
   padding: 0 20px;
 
   &__flex {
-    display: flex;
-    flex-direction: column;
-    background: #f0f6ff;
+    @include size (100%, auto, 0 auto, 40px);
+    @include flex (column);
     border-radius: 4px;
-    padding: 35px 35px 40px 40px;
-    max-width: 1120px;
-    margin: 0 auto;
   }
 
   &__text {
-    font-family: PT Sans;
-    font-size: 20px;
-    line-height: 30px;
-    color: #4f4f4f;
     margin: 0 0 22px 0;
   }
 
@@ -317,26 +291,10 @@
   }
 }
 
-.white-arrow-finance {
-  border-top: 130px solid #ffffff;
-  position: relative;
-  margin: 0 0 32px 0;
-}
-
-.arrow-up-finance {
-
-    position: absolute;
-    top: -137px;
-    left: -47px;
-
-		&__img {
-      width: 95px;
-		}
-}
+// ! to be continued
 
 .it {
-
-  margin: 0 0 48px 0;
+  @include size (auto, auto, 0 0 48px 0, 45px 0 0 0);
 
   &__flex-column {
     display: flex;
@@ -345,10 +303,6 @@
 
   &__link {
     display: block;
-    font-family: Open Sans;
-    font-size: 18px;
-    line-height: 30px;
-    color: #000000;
     text-decoration: underline;
     margin: 0 15px 8px auto;
   }
@@ -372,10 +326,6 @@
   }
 
   &__text {
-    font-family: PT Sans;
-    font-size: 20px;
-    line-height: 30px;
-    color: #4f4f4f;
     margin: 0 0 35px 0;
   }
 
@@ -395,11 +345,6 @@
 .list-it {
 
   &__title {
-    font-family: PT Sans;
-    font-weight: bold;
-    font-size: 24px;
-    line-height: 30px;
-    color: #333333;
     margin: 0 0 30px 0;
   }
 
@@ -408,12 +353,9 @@
     margin: 0 auto 0 0;
   }
 
+// !=========================
   &__item {
-    font-family: PT Sans;
-    font-size: 16px;
-    line-height: 20px;
     text-align: justify;
-    color: #4f4f4f;
     margin: 0 0 16px;
     padding: 0 0 0 30px;
     background-image: url(../img/list_item.svg);
@@ -422,14 +364,4 @@
   }
 }
 
-.arrow-up-footer {
-
-  &__img-wrap {
-    width: 95px;
-    margin: 52px auto 16px;
-  }
-
-  &__img {
-    width: 95px;
-  }
-}
+// !=========================
