--- a/src/style/components/_navigation.scss
+++ b/src/style/components/_navigation.scss
@@ -48,11 +48,11 @@
   &__body {
 
     @include respond-to('max-medium') {
-      transition: left  0.3s ease 0s;
-      overflow: auto;
-
       @include size (420px, 100%, 77px 0 0 0, 30px);
       @include position (fixed, 0, -100%);
+      background-color: $background-main-1;
+      transition: left  0.3s ease 0s;
+      overflow: auto;
 
       &_active {
         left: 0;
@@ -78,9 +78,8 @@
   &__item {
 
     @include respond-to('max-medium') {
-      border-bottom: 1px solid rgba(51, 51, 51, 0.2);
-
       @include size (100%, auto, 0 0 30px, 0 0 25px);
+      border-bottom: 1px solid rgba(51, 51, 51, 0.2);
     }
 
     @include respond-to('min-medium') {
