--- a/src/style/layout/_header.scss
+++ b/src/style/layout/_header.scss
@@ -1,4 +1,5 @@
 .header {
+  width: 100%;
 
   @include respond-to('max-medium') {
     @include position (fixed);
@@ -6,7 +7,7 @@
   }
   
   &__content {
-    padding: 27px 25px;
+    @include size (100%, auto, auto, 27px 25px);
     @include flex (row, space-between);
   }
 
