--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -18,6 +18,7 @@
   'components/sales_arrow',
   'components/finance-arrow',
   'components/links-font',
+  'components/main-text',
   'components/navigation',
   'components/start-columns',
   'components/title_section',
