--- a/src/components/_start.html
+++ b/src/components/_start.html
@@ -5,20 +5,19 @@
     <div class="start-columns__item">
       <div class="start-columns__img start-columns__img-1"></div>
       <h4 class="start-columns__title">Ознакомительный тренинг</h4>
-      <p class="start-columns__text">Во время однодневного тренинга ваши сотрудники познакомятся с методолгией и основными инструментами Lean. Также это поможет подготовиться к старту полноценного проекта по Lean-трансформации.</p>
+      <p class="start-columns__text main-text">Во время однодневного тренинга ваши сотрудники познакомятся с методолгией и основными инструментами Lean. Также это поможет подготовиться к старту полноценного проекта по Lean-трансформации.</p>
     </div>
     
     <div class="start-columns__item">
       <div class="start-columns__img start-columns__img-2"></div>
       <h4 class="start-columns__title">Мини-трансформация</h4>
-      <p class="start-columns__text">За короткий срок сможете оценить преимущества системы Lean. Мы выявляем проблему вашей компании и при помощи инструментов Lean решаем её за 3-5 рабочих дней, получая первые результаты.</p>
+      <p class="start-columns__text main-text">За короткий срок сможете оценить преимущества системы Lean. Мы выявляем проблему вашей компании и при помощи инструментов Lean решаем её за 3-5 рабочих дней, получая первые результаты.</p>
     </div>
     
     <div class="start-columns__item">
-      <!-- <img class="column-start__img" src="assets/img/project.png" alt=""> -->
       <div class="start-columns__img start-columns__img-3"></div>
       <h4 class="start-columns__title">Проект по сопровождению</h4>
-      <p class="start-columns__text">Полноценный проект по сопровождению вашей компании на пути Lean-трансформации. Cоздание Lean культуры, для того чтобы увлечь, замотировать сотрудников самостоятельно внедрять улучшения.</p>
+      <p class="start-columns__text main-text">Полноценный проект по сопровождению вашей компании на пути Lean-трансформации. Cоздание Lean культуры, для того чтобы увлечь, замотировать сотрудников самостоятельно внедрять улучшения.</p>
     </div>
   </div>
 
