--- a/src/style/pages/_index.scss
+++ b/src/style/pages/_index.scss
@@ -7,11 +7,10 @@
 .introduction {
   @include size (100%, auto, 0, 10% 0 14%);
   @include position (relative);
-// !=========================
+
   @include respond-to('max-medium') {
     background: $intro-gradient;
   }
-// !=========================
 
   &__flex {
     @include flex (column, center, flex-start);
@@ -19,6 +18,8 @@
 
   &__title {
     margin-bottom: 26px;
+    @include font ($intro-font-family, $intro-weight, $intro-size, $intro-height);
+    color: $intro-color;
     z-index: 5;
 
     & span {
@@ -29,53 +30,39 @@
         margin-left: 0;
       }
     }
-  // !=========================
 
-    @include respond-to('max-huge') {
-      font-size: 41px;
-    }
-
-    @include respond-to('max-large') {
-      font-size: 33px;
-    }
-
+    @include fontAdaptive (41px, 33px, 28px, 24px);
+    
     @include respond-to('max-medium') {
       max-width: 600px;
-      font-size: 28px;
       color: $intro-span-color;
     }
 
     @include respond-to('max-small') {
       max-width: 460px;
-      font-size: 24px;
     }
-  // !=========================
-
   }
 
   &__text {
     max-width: 490px; 
     margin-bottom: 35px;
+    
+    color: $black-blue;
     z-index: 5;
 
-// !=========================
     @include respond-to('max-huge') {
       max-width: 450px;
-      font-size: 18px;
     }
 
     @include respond-to('max-large') {
       max-width: 378px;
-      font-size: 16px;
     }
 
     @include respond-to('max-medium') {
       max-width: 350px;
-      font-size: 14px;
     }
   }
 
-// !=========================
   &__link {
     margin: 0 auto 0 0;
     z-index: 5;
@@ -171,16 +158,10 @@
     }
   }
 
-// !=========================
   &__text {
     margin: 0 0 30px 0;
-
-    @include respond-to('max-small') {
-      font-size: 18px;
-    }
   }
 
-// !=========================
   &__list {
 
     @include respond-to('max-medium') {
