--- a/src/style/components/_links-font.scss
+++ b/src/style/components/_links-font.scss
@@ -1,4 +1,5 @@
 // index links (navigation, use, button)
 .links-font {
   @include font ($link-font-family, $link-weight, $link-size, $link-height);
+  @include fontAdaptive ();
 }
