--- a/src/components/_header.html
+++ b/src/components/_header.html
@@ -1,8 +1,6 @@
 <header class="header">
   <div class="header__content content-width">
-    <a class="header__logo logo" href="index.html">
-      <img src="assets/img/logo.png" width="100px" alt="Логотип">
-    </a>
+    <a class="header__logo logo" href="index.html"></a>
     <div class="header__navigation navigation">
       <div class="navigation__burger">
         <span></span>
@@ -10,13 +8,13 @@
       <nav class="navigation__body">
         <ul class="navigation__list">
           <li class="navigation__item">
-            <a class="navigation__link links-font" href="concept.html">Концепция</a>
+            <a class="navigation__link" href="concept.html">Концепция</a>
           </li>
           <li class="navigation__item">
-            <a class="navigation__link links-font" href="team.html">Команда</a>
+            <a class="navigation__link" href="team.html">Команда</a>
           </li>
           <li class="navigation__item">
-            <a class="navigation__link links-font" href="contacts.html">Контакты</a>
+            <a class="navigation__link" href="contacts.html">Контакты</a>
           </li>
         </ul>
       </nav>
