--- a/src/style/components/_navigation.scss
+++ b/src/style/components/_navigation.scss
@@ -88,6 +88,7 @@
   }
 
   &__link {
+    @include font ($link-font-family, $link-weight, $link-size, $link-height);
     color: $link-color;
     transition: all 0.3s ease-in-out;
 
