--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -19,6 +19,7 @@
   'components/finance-arrow',
   'components/links-font',
   'components/main-text',
+  'components/logo',
   'components/navigation',
   'components/start-columns',
   'components/title_section',
