--- a/src/style/abstracts/_mixins.scss
+++ b/src/style/abstracts/_mixins.scss
@@ -5,10 +5,8 @@
   line-height: $height;
 }
 
-@mixin fontAdaptive ($f1: $main-f1, $lh1: $main-lh1, 
-                    $f2: $main-f2, $lh2: $main-lh2, 
-                    $f3: $main-f3, $lh3: $main-lh3, 
-                    $f4: $main-f4) {
+@mixin fontAdaptive ($lh1: $main-lh1, $lh2: $main-lh2, $lh3: $main-lh3, 
+                  $f1: $main-f1, $f2: $main-f2, $f3: $main-f3, $f4: $main-f4) {
 
   @include respond-to('max-huge') {
       font-size: $f1;
