--- a/src/style/layout/_footer.scss
+++ b/src/style/layout/_footer.scss
@@ -11,6 +11,10 @@
     }
   }
 
+  // &__logo {
+  //   @include backgroundImage (url(../assets/img/logo.png), 0 0, contain);
+  // }
+
   &__logo {
     margin: 0 30px auto 0;
 
