--- a/src/style/layout/_header.scss
+++ b/src/style/layout/_header.scss
@@ -13,10 +13,6 @@
   }
 
   &__logo {
+    @include backgroundImage (url(../assets/img/logo.png), 0 0, contain);
   }
-}
-
-.logo {
-  @include size (100px, 22px, auto 0);
-  @include backgroundImage (url(../assets/img/logo.png), 0 0, 100% 100%);
 }
