fix: fix intro title

--- a/Lean-In/css/style.css
+++ b/Lean-In/css/style.css
@@ -1647,8 +1647,8 @@ h6 {
   }
 
   .introduction__title {
-    font-size: 24px;
-    line-height: 41px;
+    font-size: 41px;
+    line-height: 125%;
   }
 
   .introduction__text {
@@ -1702,8 +1702,8 @@ h6 {
   }
 
   .introduction__title {
-    font-size: 18px;
-    line-height: 33px;
+    font-size: 33px;
+    line-height: 125%;
   }
 
   .introduction__text {
@@ -1940,8 +1940,8 @@ h6 {
   }
 
   .introduction__title {
-    font-size: 16px;
-    line-height: 28px;
+    font-size: 28px;
+    line-height: 125%;
   }
 
   .introduction__title {
@@ -2080,8 +2080,8 @@ h6 {
   }
 
   .introduction__title {
-    font-size: 14px;
-    line-height: 28px;
+    font-size: 24px;
+    line-height: 125%;
   }
 
   .introduction__title {
